# wm

./: .gitignore  README.md  config.py  conftest.py  eval.py  play.py  play_web.py  pyproject.toml  render.py  requirements.txt  train.py
agents/: base.py  model_agent.py  random_agent.py
data/: README.md
docs/: design.md  logging.md  requirements.md  results.md
model/: encoder.py  transformer.py
rl/: curriculum.py  logging.py  ppo.py  reward.py  rollout.py
tests/: test_encoder.py  test_env.py  test_feedback.py  test_feedback_table.py  test_model.py  test_reward.py  test_rollout_ppo.py
web/: wordle.html
wordle/: env.py  feedback.py  feedback_table.py  words.py
